Bug 148720 - FILEOPEN DOCX: Positions of shapes within a grouping are jumbled
Summary: FILEOPEN DOCX: Positions of shapes within a grouping are jumbled
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Attila Bakos (NISZ)
URL:
Whiteboard: target:7.4.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-Grouped-Shapes
  Show dependency treegraph
 
Reported: 2022-04-22 08:59 UTC by Telesto
Modified: 2022-05-23 14:49 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (11.57 KB, application/vnd.oasis.opendocument.text)
2022-04-22 09:00 UTC, Telesto
Details
Screenshot of the problem (70.96 KB, image/png)
2022-05-02 11:08 UTC, Attila Bakos (NISZ)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2022-04-22 08:59:58 UTC
Description:
FILEOPEN DOCX: Positions of shapes within a grouping are jumbled

Steps to Reproduce:
1. Open the attached file
2. Save as DOCX
3. File reload 

-> it's not an export issue 

Actual Results:
Jumbled

Expected Results:
Everything on properly positioned


Reproducible: Always


User Profile Reset: No



Additional Info:
Found in
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 4659fc2f0a7223a89446edff0b77e58758b5edf5
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: en-US (nl_NL); UI: en-US
Calc: CL Jumbo

No repro with
Version: 7.2.1.0.0+ (x64) / LibreOffice Community
Build ID: 8fdbb8aed1b48734a717d5f98ada566de7204605
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Telesto 2022-04-22 09:00:11 UTC
Created attachment 179723 [details]
Example file
Comment 2 Ezinne 2022-04-29 13:02:12 UTC
Reproducible using:

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 5453f75a1e682992f3a725781bb563b8cc76cf1b
CPU threads: 8; OS: Linux 5.13; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 3 Martin Srdoš 2022-04-30 18:22:49 UTC
Report from bisecting:
 2df304c999afd3e4d29eb843d6fc81826b52f53c is the first bad commit
commit 2df304c999afd3e4d29eb843d6fc81826b52f53c
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Mon Jan 3 06:12:58 2022 -0800

    source 2951cbdf3a6e2b62461665546b47e1d253fcb834

    source 2951cbdf3a6e2b62461665546b47e1d253fcb834

I am adding Attila Bakos (NISZ) to the CC list.
Comment 4 Attila Bakos (NISZ) 2022-05-02 11:08:18 UTC
Created attachment 179889 [details]
Screenshot of the problem

Hi there. As my attachment shows the only problem is that, the textboxes has different wrapping setting than through. (upper fig.) If i replace the wrapping to Through, this will be fine too (lower fig.), so this is a sync problem. Fix soon.
Comment 5 Attila Bakos (NISZ) 2022-05-17 13:41:33 UTC
patch here: https://gerrit.libreoffice.org/c/core/+/134149
Comment 6 Commit Notification 2022-05-19 09:19:14 UTC
Attila Bakos (NISZ) committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5648363e8f70cd95b00db62f91effb7eb1385ac9

tdf#148720 sw DOCX: fix jumbled group textbox regression

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Martin Srdoš 2022-05-20 17:25:20 UTC
(In reply to Attila Bakos (NISZ) from comment #5)
> patch here: https://gerrit.libreoffice.org/c/core/+/134149

Hei Attila. Thanks you for the patch. I can commit that nowaday daily release has fixed the bug.

I think you should set the status as RESOLVED and then I set it as VERIFIED.