tdf#148720 SW Docx: Fix jumbled group textbox

Regression from:
2951cbdf3a6e2b62461665546b47e1d253fcb834
tdf#143574 OOXML export/import of textboxes in group shapes

If groupshape has left alignemnt, it was synced to
the textbox what caused the problem. Setting it back
to NONE, it works fine.

Change-Id: I02ee79862344f3495846091e3eef27c24d8ef162